@@ -57,3 +57,4 @@
 /covid_behind_bars/create.sql
 /covid_behind_bars/default_resident_active_staff_active_columns.sql
 /covid_behind_bars/increase_integer_column_ranges.sql
+/osha_complaints/create.sql
